--- a/index.html
+++ b/index.html
@@ -5,33 +5,66 @@
         <meta name="viewport" content="width=device-width, initial-scale= 1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="author" content="Austin obimbo">
+        <title>Capstone Project</title>
         <link rel="stylesheet" type="text/css" href="styles.css"> 
     </head>
     <body>
        <header>
-          <nav>
-            <img class="hamberger" src="img/mobile_menu 1.png" alt="ham-btn">
-            <img class="logo"  src = "img/logo.png" alt="logo">
+        <nav id="top-nav">
+           <ul class= "top-nav-list">
+            <li class="topNav"><img src="img/twitter.png" alt="twitter"></li>
+            <li class="topNav"><img src="img/facebook.png" alt="twitter"></li>
+            <li class="topNav">English</li>
+            <li class="topNav">My Page</li>
+            <li class="topNav">Logout</li>
+           </ul>
           </nav>
+          <nav>
+            <img id="hamberger" src="img/mobile_menu 1.png" onclick="openMenu()" alt="ham-btn">
+            <img class="logo"  src = "img/logo.png" alt="logo">
+            <ul id="desktop-nav">
+                <a href="About.html"><li class="nav-linksDesktop">About</li></a>
+                 <a href="index.html"> <li class="nav-linksDesktop">Program</li></a>
+                    <a href="index.html"><li class="nav-linksDesktop">join</li></a>
+                        <a href="index.html"><li class="nav-linksDesktop">Sponsor</li></a>
+                            <a href="index.html"><li class="nav-linksDesktop">News</li></a>
+                                <a href="index.html"><li class="nav-linksDesktop" id="campaign">CC Campaign</li></a>
+            </ul>
+          </nav>
+          <div class="drop-down" id="navMenu">
+            <ul class="dropdown-menu">
+             <h1 aria-hidden="true" class="times-Btn" id="menu-close" onclick="closeMenu()">&times;</h1>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">About</li> </a>
+             <a href=""><li class="menu-link" id="nav-btn" onclick="closeMenu()">Program</li> </a>
+             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Join</li> </a>
+             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Sponsors</li> </a>
+             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">News</li> </a>
+             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">CC Campaign</li> </a>
+            </ul>
+        </div>
         </header>
         <section id="banner">
+            <div class="banner-hero">
             <div class="banner-quote"> 
-                <img src="img/theme.png" alt="banner-quote" class="banner-img">
+                <h3 class="hero-text" id="text1" >"Hello! STEM World"</h3>
+                <h2 class="hero-text text2">CREATIVE LEARNING INSPIRATION 2023</h2>
             </div>
             <div class="banner-text">
-                <p>A joyful celebration believing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in October, in Korea.</p>
+                <p>A joyful celebration believing in the value of openness and sharing, creating a positive change with people from over 80 countries is taking place in May, in Nairobi.</p>
             </div>
             <div class="banner-date">
-                <h1 class="date-title">2015.10.15(THU) ~ 16(FRI) </h1>
-                <h2 class="date-subtitle">@ National Museum of Karea, Art Center Nabi and more </h2>
+                <h1 class="date-title">2023 . 10. 15(THU) ~ 16(FRI) </h1>
+                <h2 class="date-subtitle">&copy; Nairobi, Kenya, The Alma Cyton Limuru road</h2>
             </div>
+        </div>
         </section>
         <section id="program">
             <div class="program-content">
                 <div class="program-main-title">
                     <h1 class="program-head">Main Program</h1>
-                    <br class="program-breaker">
+                    <hr class="program-breaker">
                 </div>
+              <div class="program-flex">
                 <div class="program-details">
                     <div class="program-card">
                         <div class="card-details"> 
@@ -49,7 +82,7 @@
                             <img class="program-img" src="img/program_icon_02 1.png" alt="card image">
                             <div class="program-text">
                                 <h5 class="program-title">CC Exhibition</h5>
-                                <p class="program-text2">Listen to the speakers from various countries about the messages of sharing and opening.</p>
+                                <p class="program-text2">Appreciate various creations applying CC license of artists, organized from Art Center Nabi.</p>
                             </div>
                         </div>
                     </div>
@@ -60,7 +93,7 @@
                             <img class="program-img" src="img/program_icon_03 1.png" alt="card image">
                             <div class="program-text">
                                 <h5 class="program-title">Forum</h5>
-                                <p class="program-text2">Listen to the speakers from various countries about the messages of sharing and opening.</p>
+                                <p class="program-text2">Have the time to share your thoughts and opinions with experts for each topic.</p>
                             </div>
                         </div>
                     </div>
@@ -71,7 +104,7 @@
                             <img class="program-img" src="img/program_icon_04 1.png" alt="card image">
                             <div class="program-text">
                                 <h5 class="program-title">WorkFlow</h5>
-                                <p class="program-text2">Listen to the speakers from various countries about the messages of sharing and opening.</p>
+                                <p class="program-text2">Try creating your own work using open source license rather than just watching at it.</p>
                             </div>
                         </div>
                     </div>
@@ -82,11 +115,12 @@
                             <img class="program-img" src="img/program_icon_05 1.png" alt="card image">
                             <div class="program-text">
                                 <h5 class="program-title">CC ignite</h5>
-                                <p class="program-text2">Listen to the speakers from various countries about the messages of sharing and opening.</p>
+                                <p class="program-text2">get opportunities to network with CC affiliates around the world, also after the summit.</p>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
                 <div class="bottom-text">
                    <h2>Join CC Global Summit 2015</h2>
                  </div>
@@ -96,6 +130,10 @@
             <div class="section-content">
                 <div class=section-title>
                     <h1>Featured Speakers</h1>
+                    <hr class="speakers-breaker">
+                    <div id="speakers-section">
+
+                    </div>
                 </div>
               <div id="speakers">
                   <div class="speaker"></div>
@@ -107,6 +145,29 @@
                  </div>
              </div>
             </div>
+        </section>
+        <section id="partners">
+            <div class="partners-title">
+                <h2 id="partner">Partner</h2>
+                <hr id="partner-breaker">
+            </div>
+            <div class="partners-logo">
+               <div class="partnersLogo">
+                  <img class= "partners-Logo" src="img/mozilla 1.png" alt="Mozilla">
+                  <img class= "partners-Logo" src="img/googlekorea 1.png" alt="Google">
+                  <img class= "partners-Logo" src="img/naver 1.png" alt="Naver">
+                  <img class= "partners-Logo" src="img/daumkakaologo 1.png" alt="daumkakao">
+                  <img class= "partners-Logo" src="img/airbnb 1.png" alt="AirBnb">
+               </div>
+            </div>
+        </section>
+        <section id="footer">
+            <div class="footer-content">
+              <img  src="img/cck-logo1 1.png" alt="footer-img">
+             <div class="footer-credit">
+                <p>2015 Creative Commons Korea. Some Rights Reserved.</p>
+            </div>
+          </div>
         </section>
        <script src="index.js"></script> 
  </body>
