updates and template fix

--- a/About.html
+++ b/About.html
@@ -7,6 +7,7 @@
         <meta name="author" content="Austin obimbo">
         <title>Capstone Project</title>
         <link rel="stylesheet" type="text/css" href="styles.css"> 
+        <link rel="stylesheet" type="text/css" href="normalize.css"> 
     </head>
     <body>
        <header>
@@ -21,7 +22,7 @@
          </nav>
           <nav>
             <img id="hamberger" src="img/mobile_menu 1.png" onclick="openMenu()" alt="ham-btn">
-            <img class="logo"  src = "img/logo.png" alt="logo">
+            <a href="index.html" class=logo-link> <img class="logo"  src = "img/logo.png" alt="logo"> </a>
             <ul id="desktop-nav">
               <a href="About.html"><li class="nav-linksDesktop">About</li></a>
               <a href="index.html"> <li class="nav-linksDesktop">Program</li></a>
@@ -34,19 +35,22 @@
           <div class="drop-down" id="navMenu">
             <ul class="dropdown-menu">
              <h1 aria-hidden="true" class="times-Btn" id="menu-close" onclick="closeMenu()">&times;</h1>
-             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">About</li> </a>
-             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Program</li> </a>
-             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Join</li> </a>
-             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Sponsors</li> </a>
-             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">News</li> </a>
-             <a href="#"><li class="menu-link" id="nav-btn" onclick="closeMenu()">CC Campaign</li> </a>
+             <a href="About.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">About</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Program</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Join</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Sponsors</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">News</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">CC Campaign</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">English</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">My Page</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Log Out</li> </a>
             </ul>
         </div>
         </header>
         <section id="hero">
            <div class="hero-content">
              <div class="hero-content1">
-               <h3 class="hero-text" id="About-text1" >20th Stem Congress Meeting</h3>
+        
                <h2 class="hero-text text2">CREATIVE COMMONS GLOBAL SUMMIT 2015</h2>
              </div>
              <div class="hero-content2">
@@ -59,7 +63,7 @@
                 </div>
                   <div class="textcontent-3">
                    <p>Please contact us per Email for nay further questions about CC Global Summit 2015!</p>
-                   <a href="#"> <h2>ccsummit@cckorea.org</h2> </a>
+                   <a href="index.html"> <h2>ccsummit@cckorea.org</h2> </a>
                  </div>
                </div>
              </div>
@@ -118,13 +122,13 @@
                </div>
             </div>
         </section>
-        <section id="footer">
+        <footer class="about-footer" id="footer">
             <div class="footer-content">
-              <img  src="img/cck-logo1 1.png" alt="footer-img">
+              <img  src="img/aboutfooter-logo.png" alt="footer-img">
              <div class="footer-credit">
                 <p>2015 Creative Commons Korea. Some Rights Reserved.</p>
             </div>
           </div>
-        </section>
+        </footer>
         <script src="index.js"></script>
     </body> 
