background banner changes

--- a/About.html
+++ b/About.html
@@ -24,7 +24,7 @@
             <img id="hamberger" src="img/mobile_menu 1.png" onclick="openMenu()" alt="ham-btn">
             <a href="index.html" class=logo-link> <img class="logo"  src = "img/logo.png" alt="logo"> </a>
             <ul id="desktop-nav">
-              <a href="About.html"><li class="nav-linksDesktop">About</li></a>
+              <a href="index.html"><li class="nav-linksDesktop">About</li></a>
               <a href="index.html"> <li class="nav-linksDesktop">Program</li></a>
                  <a href="index.html"><li class="nav-linksDesktop">join</li></a>
                      <a href="index.html"><li class="nav-linksDesktop">Sponsor</li></a>
@@ -35,7 +35,7 @@
           <div class="drop-down" id="navMenu">
             <ul class="dropdown-menu">
              <h1 aria-hidden="true" class="times-Btn" id="menu-close" onclick="closeMenu()">&times;</h1>
-             <a href="About.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">About</li> </a>
+             <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">About</li> </a>
              <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Program</li> </a>
              <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Join</li> </a>
              <a href="index.html"><li class="menu-link" id="nav-btn" onclick="closeMenu()">Sponsors</li> </a>
